Prepare Streamline production release candidate